# astro

./: clang-format.sh
astro/: CMakeLists.txt  package.xml
astro_control/: CMakeLists.txt  package.xml
astro_control/config/: astro_control.yaml  astro_controllers.yaml  joints.yaml
astro_control/include/astro_control/: controller_publisher.h
astro_control/include/astro_control/floating_base/: floating_base.h
astro_control/include/astro_control/gait_generator/: gait_generator.h
astro_control/launch/: astro_position_control.launch  gazebo.launch  gtest.test  gtest_optcon.test
astro_control/launch/unit_tests/: gtest_gait_generator.test
astro_control/src/: controller_publisher.cpp  talker.cpp
astro_control/src/examples/: example_optimization.cc  example_optimization_copy.cc
astro_control/src/floating_base/: CMakeLists.txt  floating_base.cc  floating_base.h  robot_params.h
astro_control/src/gait_generator/: CMakeLists.txt  gait_generator.cc
astro_control/src/gait_generator/test/: test_gait_generator.cc
astro_control/src/qpOASES/: CMakeLists.txt
astro_control/src/qpOASES/examples/: example1.cpp
astro_control/test/: how_to_run_unit_tests.txt  test_astro_ct_optcon.cc  test_hello.cc
astro_description/: CMakeLists.txt  package.xml  urdf.rviz
astro_description/config/: joint_names_astro_description.yaml  joints.yaml
astro_description/launch/: display.launch  display_new.launch  gazebo.launch  hyq.launch  hyq_2.launch
astro_description/meshes/: base_link.STL  body.stl  hip_0.STL  hip_1.STL  hip_2.STL  hip_3.STL  hip_motor.stl  knee_0.STL  knee_1.STL  knee_2.STL  knee_3.STL  shin.stl  shoulder_0.STL  shoulder_2.STL  shoulder_3.STL  toe.stl  toe_0.STL  toe_1.STL  toe_2.STL  toe_3.STL  upper_leg.stl
astro_description/urdf/: astro.urdf  astro.xacro  astro1.urdf  astro_description.csv  astro_description.urdf  astro_new.xacro
astro_xpp/: CMakeLists.txt  package.xml
astro_xpp/include/astro_xpp/: astroleg_inverse_kinematics.h  inverse_kinematics_astro.h
astro_xpp/launch/: astro_towr.launch  astro_xpp.launch
astro_xpp/rviz/: astro_xpp.rviz
astro_xpp/src/: astro_xpp_visualizer.cc  astroleg_inverse_kinematics.cc  inverse_kinematics_astro.cc
