<package>
  <name>astro_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for astro</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>urdf</buildtool_depend>
  <buildtool_depend>controller_manager</buildtool_depend>
  <buildtool_depend>joint_state_publisher</buildtool_depend>
  <buildtool_depend>robot_state_publisher</buildtool_depend>

  <run_depend>roslaunch</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>gazebo</run_depend>

  <export>
    <architecture_independent />
  </export>
</package>